2000-11-21  Kevin Buettner  <kevinb@redhat.com>

	* solib.c (solib_open): Handle the case where
	solib_absolute_prefix is NULL.

2000-11-20  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* solist.h: Declare new function solib_open.
	* solib.c (solib_open): New function.  Abstracts some of the
	code from solib_map_sections, for finding the binary solib file.
	(solib_map_sections): Call solib_open.
	* solib-svr4.c (enable_break): Call solib_open.

2000-11-20  J.T. Conklin  <jtc@redback.com>

	* gdbserver/low-nbsd.c (fetch_inferior_registers,
 	store_inferior_registers): Support older NetBSD/powerpc systems
 	from before fp reg support was added.  Adapt to register number
 	changes caused when powerpc target was multi-arched.

2000-11-20  H.J. Lu  <hjl@gnu.org>

	* ia64-tdep.c (gdbarch_tdep): Change reference from
	ELFOSABI_MONTEREY to ELFOSABI_AIX.

2000-11-20  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* c-valprint.c (print_function_pointer_address):  New function
	to automatically dereference a function pointer for printing
	if necessary.
	(c_val_print):  Use print_function_pointer_address when printing
	function pointer addresses.

2000-11-20  J.T. Conklin  <jtc@redback.com>

	* gdbserver/low-nbsd.c: Fix typos.

2000-11-20  Jeffrey A Law  (law@cygnus.com)

        * pa64solib.c (add_to_solib): Pass TARGET to pa64_solib_load_symbols.

Mon Nov 20 23:21:53 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Peter Schauer and Kevin Buettner maintain AIX.  Jim
 	Blandy, Kevin Buettner and Peter Schauer share shared libs.

	From Nick Duffek:
 	* MAINTAINERS: Share responsibility for
 	Solaris/x86 between co-maintainers.

	* MAINTAINERS: Add linespec as a separate component.
	
Mon Nov 20 14:29:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* command.h (error_no_arg): Add noreturn attribute to declaration.

Fri Nov 17 16:07:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* utils.c (xvasprintf, xasprintf): New functions.